--- a/app/src/main/res/drawable/home_gradient_maths.xml
+++ b/app/src/main/res/drawable/home_gradient_maths.xml
@@ -6,13 +6,10 @@
     <gradient
         android:angle="0"
         android:centerX="0%"
-        android:startColor="#FF416C"
-        android:endColor="#8A52E9"
+        android:startColor="#2193b0"
+        android:endColor="#6dd5ed"
         android:type="linear"
         />
 
-    <size
-        android:width="334dp"
-        android:height="100dp"
-        />
+
 </shape>
