--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,6 +110,7 @@
 <!--                    gl:orientation="LEFT_RIGHT"-->
 <!--                    android:padding="10dp">-->
                 <RelativeLayout
+                    android:id="@+id/offers"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:minHeight="100dp"
