--- a/app/src/main/res/layout/offers_layout.xml
+++ b/app/src/main/res/layout/offers_layout.xml
@@ -5,13 +5,14 @@
     android:orientation="vertical"
     android:weightSum="100">
 
-    <ImageView
+    <pl.droidsonroids.gif.GifImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="30"
+        android:src="@drawable/header_offer"
+        android:scaleType="fitXY"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="5dp"
-        android:background="@drawable/header_offer"/>
+        android:layout_marginVertical="5dp"/>
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
