--- a/app/src/main/res/layout/fragment_my_order.xml
+++ b/app/src/main/res/layout/fragment_my_order.xml
@@ -25,51 +25,71 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-condensed"
-        android:textSize="15dp"
         android:text="Picking Date:"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/rowItemImageView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/pickUpDateFragment"
-        android:layout_width="121dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="12dp"
-        android:text="PickUp Date"
-        app:layout_constraintEnd_toStartOf="@+id/quantityItemFragment"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/rowItemImageView"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        android:id="@+id/stateItemFragment"
+        android:layout_width="42dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@+id/stateTextView"
+        app:layout_constraintStart_toEndOf="@+id/stateTextView" />
+
+    <TextView
+        android:id="@+id/quantityItemFragment"
+        android:layout_width="106dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
+        app:layout_constraintStart_toEndOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Number of Pieces"
-        android:textStyle="bold"
+        android:layout_height="25dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-condensed"
-        android:textSize="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.663"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Number of Pieces:"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/rowItemImageView"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
-        android:id="@+id/quantityItemFragment"
-        android:layout_width="121dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:text="Item Quantity"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/pickUpDateFragment"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
+        app:layout_constraintStart_toEndOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/stateTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="22dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="8dp"
+        android:text="State:"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/rowItemImageView"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 
