--- a/app/src/main/res/layout/activity_donation.xml
+++ b/app/src/main/res/layout/activity_donation.xml
@@ -415,6 +415,29 @@
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".activities.OrderPage">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    app:cardBackgroundColor="#F86358"
+                    app:cardCornerRadius="16dp"
+                    app:cardElevation="2dp">
+
+                    <TextView
+                        style="@style/viewParent.headerText"
+                        android:layout_gravity="center"
+                        android:text="Pick The Suitable Date For You"
+                        android:textColor="#000000"
+                        android:textSize="25dp" />
+
+                </androidx.cardview.widget.CardView>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:context=".activities.OrderPage">
 
@@ -475,6 +498,29 @@
                     android:src="@drawable/calendar" />
 
 
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".activities.OrderPage">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    app:cardBackgroundColor="#F86358"
+                    app:cardCornerRadius="16dp"
+                    app:cardElevation="2dp">
+
+                    <TextView
+                        style="@style/viewParent.headerText"
+                        android:layout_gravity="center"
+                        android:text="Pick The Delivery Location"
+                        android:textColor="#000000"
+                        android:textSize="25dp" />
+
+                </androidx.cardview.widget.CardView>
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -542,11 +588,11 @@
             <Button
                 android:id="@+id/Donate"
                 style="@style/loginButton"
+                android:layout_width="match_parent"
                 android:layout_gravity="right"
                 android:layout_marginTop="@dimen/loginViewsMargin"
-                android:text="ADD"
-
-                app:backgroundTint="#FF5722" />
+                android:minWidth="88dip"
+                android:text="Donate"/>
 
         </LinearLayout>
 
