--- a/app/src/main/res/layout/activity_order_page.xml
+++ b/app/src/main/res/layout/activity_order_page.xml
@@ -487,7 +487,7 @@
                     <TextView
                         style="@style/viewParent.headerText"
                         android:layout_marginLeft="10dp"
-                        android:text="Panties"
+                        android:text="Pants"
                         android:textColor="#000000" />
 
                     <ImageView
