--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -77,19 +77,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInput_gender_profile"
-            style="@style/parent"
-            android:layout_marginTop="@dimen/loginViewsMargin"
-            >
-
-            <EditText
-                android:id="@+id/gender_profile"
-                style="@style/modifiedEditText"
-                android:hint="Gender"
-                android:inputType="text"
-                android:maxLines="1" />
-        </com.google.android.material.textfield.TextInputLayout>
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -131,9 +118,38 @@
                 android:layout_height="42dp"
                 android:hint="Birthdate"
                 android:inputType="date"
-                android:maxLines="1" />
+                android:maxLines="1"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInput_gender_profile"
+            style="@style/parent"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Gender"
+                android:layout_height="42dp"
+                android:maxLines="1"
+
+                />
+            <Spinner
+                android:id="@+id/gender_profile"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:entries="@array/gender"
+
+                />
+
+
+
+        </com.google.android.material.textfield.TextInputLayout>
+
 
 
         <Button
